# autopilot

./: .gitignore  CMakeLists.txt  add_obstacle  autopilot.py  bebop_controller.py  bebop_ctrl_state.py  benchmark.md  best_path.py  config.rviz  global_planner.py  image_proc  incr_global_planner.py  loadMapDbOct  local_planner.py  logger.py  main.py  octomap_slicer.py  offset_poses  package.xml  readme.md  sampler.py  test.py  traj_viz.py
analysis/: B.json  C.json  D.json  F.json  analysis.ipynb
analysis/a_star_rrt_comparison/: A.json  E.json  analysis.ipynb
analysis/mp_optim/: MPL_Optimization.ipynb  analysis.ipynb  mpls1.npy  mpls2.npy  mpls3.npy  mpls4.npy  mpls5.npy  mpls6.npy
analysis/optim_time/: analysis.ipynb
analysis/phi_theta_replanif/: replanif.ipynb
analysis/pos0_estim/: acc_data1.npy  analysis.ipynb  kalman.ipynb  linear.ipynb  plot_acc1.py  pos1.npy  req1.npy
analysis/traj_evaluate/: bestLength.npy  evaluate.py  extractBestLength.py  extractLength.py  extractResults.py  getSuccess.py  launch.py  length6.npy  length_analysis.ipynb  save1_empty.npy  save1_failure.npy  save1_success.npy  save2.npy  save3.npy  save4.npy  save5.npy  save6.npy  success_analysis.ipynb
bebop/: config.yaml
evaluation/: __init__.py  path.py
launch/: autopilot.launch  fly.launch  mapping.launch  simulation.launch
mapping/: __init__.py  coordinates.py  map.py
motion_primitive/: __init__.py  motion_primitive.py  motion_primitive_library.py  single_axis_trajectory.py
msg/: BoundingBox.msg  MotionPrimitive.msg
node/: __init__.py  base_node.py  local_goal_node.py  logger_node.py  mission.py  mission_node.py  motion_primitive_node.py  node_base.py  octomap_node.py  offboard_node.py  path_utils.py  trajectory_sampler_node.py  visualization.py  visualization_node.py
octomaps/: maze.bt  test_zone.bt  warehouse.bt
planning/: __init__.py  a_star.py  dummy.py  incr_phi_star.py  motion_primitive.py  phi_star.py  rrt_star.py  smoothing.py  theta_star.py  utils.py
src/: CostFunc.h  LocalPlanner.cpp  MotionPrimitive.cpp  MotionPrimitive.h  MotionPrimitiveLibrary.cpp  MotionPrimitiveLibrary.h  SingleAxisTrajectory.cpp  SingleAxisTrajectory.h  Vec3.h  localPlanner.cpp  local_planner.cpp  octo_node.cpp
srv/: LocalGoal.srv  MotionPrimitive.srv
world_to_octomap/: blend_convert_to_obj.py  readme.md  world2dae.py  world2oct.sh
worlds/: big_forest.world  forest0.world  forest2.world  forest3.world  forest4.world  forest5.world  forest6.world  forest7.world  forest8.world  forest9.world  maze.world  warehouse.world
